# memory-movie-maker

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  memory_movie_maker_spec.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
docs/: AGENT_ARCHITECTURE.md  API_REFERENCE.md  COMPOSITION_NEXT_STEPS.md  NEXT_STEPS.md  PRD.md  README.md  ROOT_AGENT_GUIDE.md  TDD.md  roadmap.md
docs/adr/: 001-use-google-adk.md  002-data-model-design.md
examples/: project_state_flow.py  test_data.py
examples/agents/: sample_analysis_agent.py
examples/tools/: gemini_prompts.py
scripts/: create_memory_movie.py  deploy.sh  launch_web_app.py  run_tests.sh  setup_dev.sh  setup_dev_env.py  test_analysis_agent.py  test_audio_analysis.py  test_audio_with_real_file.py  test_composition.py  test_end_to_end.py  test_root_agent.py  test_semantic_audio.py  test_video_audio_analysis.py  test_visual_analysis.py
src/memory_movie_maker/: config.py
src/memory_movie_maker/agents/: analysis_agent.py  composition_agent.py  evaluation_agent.py  refinement_agent.py  root_agent.py
src/memory_movie_maker/models/: __init__.py  analysis.py  aspect_ratio.py  edit_plan.py  media_asset.py  project_state.py  timeline.py
src/memory_movie_maker/storage/: __init__.py  filesystem.py  interface.py  utils.py
src/memory_movie_maker/tools/: __init__.py  audio_analysis.py  composition.py  edit_planner.py  refinement_parser.py  semantic_audio_analysis.py  video_evaluation.py  video_renderer.py  visual_analysis.py
src/memory_movie_maker/utils/: ai_output_logger.py  logging_config.py  resolution.py  simple_logger.py
src/memory_movie_maker/web/: app.py
tests/integration/: __init__.py  test_edit_planning.py  test_end_to_end.py  test_music_sync.py  test_visual_analysis_integration.py  test_web_interface.py
tests/unit/: test_analysis_agent.py  test_audio_analysis.py  test_composition.py  test_composition_agent.py  test_evaluation_agent.py  test_models.py  test_refinement_agent.py  test_refinement_parser.py  test_root_agent.py  test_semantic_audio_analysis.py  test_storage.py  test_video_evaluation.py  test_video_renderer.py  test_visual_analysis.py
